Updated challenge markdown

--- a/code-challenge-answers.ipynb
+++ b/code-challenge-answers.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We must check the product of each integer 0 < num1 < 1,000 and num2 <= num1. The top loop steps through each integer descending, and the second multiplies multiplies each step of num1 by every positive integer less than or equal to num1. Each product is checked; if it is palindrome, store it in a list. Then find the max of the list of palindromes"
+    "We must check the product of each integer 99 < num1 < 1,000 and num2 <= num1. The top loop steps through each 3-digit integer  and the second multiplies each step of num1 by every positive integer less than or equal to num1. Each product is checked; if it is palindrome, store it in a list. Then find the max of the list of palindromes"
    ]
   },
   {
